Updates for 1.7.0.20240926T102809Z
Improvements:
- Add consistent blank line between license and package
- OIDC fragment binding with single redirect_uri parameter is now treated correctly too
- Support application query parameters in the redirect_uri
- OIDC fragment redirect_uri handling supports arbitrary non- RFC3986 compliant query and fragment parameters now (caused bereaking applications using deep-links with parameters on Keycloak)
- OIDC redirect_uri containing inexistent DNS endpoints could result in 15 to 25 seconds timeouts on validating it
- Improved /api/v1/status to report more broken config errors
- Micrometer for Prometheus monitoring
- Complete conversationId handling also via AR/WSTrus
- Upgrade to latest JDK/17 and spring-boot

Fixes:
- Fixed bootstrap points to a not yet existing keystore
- Fixed device check breaking SSO with OIDC session joiners. This also fixes a potential performance issues
- Fixed frontend error component white page caused by regexp parsing of the /app/failure URL
- Fixed RequestDeniedException log message cpIssuer=null